<resources>

    <!-- API key has been removed for security.
    Enter personal API key goes here! [CHAR LIMIT=NONE] -->
    <string name="api_key">Insert your API Key here!</string>

    <string name="app_name">Red Carpet Movies</string>

    <!-- Title for movie details activity action bar[CHAR LIMIT=15] -->
    <string name="movie_details">Movie Details</string>

    <!-- Preference title for Most Popular movie option [CHAR LIMIT=15] -->
    <string name="sort_by_most_popular">Get Most Popular</string>

    <!-- Preference title for Top-Rated movie option [CHAR LIMIT=15] -->
    <string name="sort_by_top_rated">Get Top-Rated</string>

    <!-- Title for release date [CHAR LIMIT=15] -->
    <string name="release_date">Year Released: </string>

    <!-- Title for User Rating [CHAR LIMIT=15] -->
    <string name="user_rating">User Rating: </string>

    <!-- Temporary text for movie title [CHAR LIMIT=NONE]-->
    <string name="movie_title">Movie Title Goes Here</string>

    <!-- Title for movie synopsis [CHAR LIMIT=10] -->
    <string name="synopsis_title">Synopsis:</string>

    <!-- Temporary text for synopsis body [CHAR LIMIT=NONE]-->
    <string name="synopsis">This is a movie about a lot of stuff.  This text string can become
    multiple lines of text.</string>

    <!--  activity_movie_details.xml movie poster ImageView content description [CHAR LIMIT=15] -->
    <string name="moviePoster">Movie Poster here</string>


    <!-- Text to display when no internet connection [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection available!</string>

    <!-- Text to display when no internet connection [CHAR LIMIT=NONE] -->
    <string name="no_date">No release date provided</string>

    <!-- Text to display when no response to movie API query [CHAR LIMIT=NONE] -->
    <string name="no_response">No response from movie source, please check your internet connection
    </string>

</resources>
