<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.redcarpetmovies.MovieDetailsActivity">

        <TextView
            android:id="@+id/details_movie_title"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="#d32f2f"
            android:gravity="center"
            android:textColor="#ffeb3b"
            android:textSize="@dimen/dimen_28sp"
            android:textStyle="bold|italic"
            tools:text="@string/movie_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_poster"
                android:layout_width="125dp"
                android:layout_height="180dp"
                android:contentDescription="@string/moviePoster" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/details_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold"
                        tools:text="2017" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/details_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold"
                        tools:text="7.4" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/details_section_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@color/window_divider" />

        <TextView
            android:id="@+id/synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/synopsis_title"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/details_synopsis_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:textSize="@dimen/dimen_16sp"
            tools:text="@string/synopsis" />
    </LinearLayout>

</ScrollView>